--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint"
-    
   },
   "dependencies": {
     "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.8.0",
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
